          supports login/password setting via ChallengeResponse and the
          new ChallengeScheme.FTP_PLAIN. This connector is only capable 
          to handling GET methods.
        - Added RdfClientResource that can easily navigate the Web of
          data. Can follow linked resources and linked literals.
        - Added support of inline content for link tags.
    - Breaking changes
        - The default language, defined in MetadataService is now based
          on the JVM's default locale, instead of English/US.
    - API changes
        - Added client and server RIAP connectors.
          Suggested by John Logsdon and Nirav Shah.
        - Added ClientInfo#getPreferredLanguage(), 
          getPreferredMediaType(), etc. methods.
          Suggested by Jonathan Hall.
        - Uniform has been trimmed to a single handle(Request, Response)
          method and converted to an interface. The other methods have
          been moved to the Client class. The handle(Request) method 
          has been moved to the Restlet class.
        - Context#clientDispatcher and serverDispatcher properties are
          now instances of Client instead of Uniform.
        - Removed the UniformGuard and ChallengeGuard classes. We now
          recommend to directly use Authenticator and Authorizer.
        - Added simpler TemplateRoute, Extractor and Validator filters 
          as an alternative to the single Route class.
        - Deprecated Route in favor of parent and lighter TemplateRoute
          class. In Restlet 2.1, we will reintroduce Route as an 
          abstract parent of TemplateRoute.
        - Renamed SecretDigestVerifier into DigestVerifier.
        - Restricted the role of Metadata class to metadata about
          representations for conneg. 
        - Added protected authenticated() and unauthenticated() methods
          on Authenticator.
        - Added protected authorized() and unauthorized() methods
          on Authorizer.