@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<schema xmlns="http://www.w3.org/2001/XMLSchema" targetNamespace="http://www.restlet.org/schemas/1.2/Component"
-	xmlns:tns="http://www.restlet.org/schemas/1.2/Component"
+<schema xmlns="http://www.w3.org/2001/XMLSchema" targetNamespace="http://www.restlet.org/schemas/2.0/Component"
+	xmlns:tns="http://www.restlet.org/schemas/2.0/Component"
 	elementFormDefault="qualified">
 
    <!--  
